kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
      - name: devops-container
        image: yourdockerhubusername/devops-project:v1

        ports:
        - containerPort: 80
