kubernetes/service.yml
apiVersion: v1
kind: Service

metadata:
  name: devops-service

spec:
  selector:
    app: devops-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: LoadBalancer
